--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@coral-xyz/anchor": "0.29.0",
     "@solana/web3.js": "^1.95.4",
     "assert": "*",
-    "bn.js": "*"
+    "bn.js": "*",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
